--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
       <artifactId>junit-jupiter-api</artifactId>
       <version>5.1.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.3</version>
+    </dependency>
   </dependencies>
 
 
